--- a/notebook/06.TokenizersLibrary.ipynb
+++ b/notebook/06.TokenizersLibrary.ipynb
@@ -32,7 +32,6 @@
    "source": [
     "from custom_utils import *\n",
     "\n",
-    "from collections import defaultdict\n",
     "from datasets import load_dataset\n",
     "from transformers import AutoModelForTokenClassification, AutoModelForQuestionAnswering, AutoTokenizer, pipeline\n",
     "\n",
@@ -1718,7 +1717,9 @@
     "print(f\"gpt2: {wrapper.tokenizer.backend_tokenizer.pre_tokenizer.pre_tokenize_str('Hello, how are  you?')}\")\n",
     "\n",
     "wrapper.tokenizer = AutoTokenizer.from_pretrained(\"t5-small\")\n",
-    "print(f\"t5-small: {wrapper.tokenizer.backend_tokenizer.pre_tokenizer.pre_tokenize_str('Hello, how are  you?')}\")"
+    "print(f\"t5-small: {wrapper.tokenizer.backend_tokenizer.pre_tokenizer.pre_tokenize_str('Hello, how are  you?')}\")\n",
+    "\n",
+    "wrapper.init_wrapper()"
    ],
    "metadata": {
     "collapsed": false,
