4. Summarization dataset preprocess

--- a/notebook/07. 주요 NLP 태스크 실제 구현방법/4. Summarization.ipynb
+++ b/notebook/07. 주요 NLP 태스크 실제 구현방법/4. Summarization.ipynb
@@ -213,7 +213,7 @@
    ],
    "source": [
     "from tqdm.auto import tqdm\n",
-    "import json, os, re\n",
+    "import json, os\n",
     "import pandas as pd\n",
     "\n",
     "base_dir = \"../../datas/KoT5/도서자료 요약\"\n",
